Added <dd> tags around nested <ul>s

--- a/Olive.html
+++ b/Olive.html
@@ -10,49 +10,55 @@
         <h1>Olive Oil as a Natural Moisturizer</h1>
     </header>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Events</li>
-        <li>Shop</li>
-        <li>Blog</li>
-        <li>Contact</li>
+        <li><a href="Test">Home</a></li>
+        <li><a href="Test">About</a></li>
+        <li><a href="Test">Events</a></li>
+        <li><a href="Test">Shop</a></li>
+        <li><a href="Test">Blog</a></li>
+        <li><a href="Test">Contact</a></li>
     </ul>
 
     <article>
         <p>Have you ever wondered about the benefits of olive oil? Sure, it has amazing health benefits when eaten, but it turns out olive oil can be used as part of your skincare regime too. It’s not just for cooking anymore!</p>
         <dl>
-        <dt><h4>Hair</h4></dt>
+            <dt><h4>Hair</h4></dt>
 
-        <dd>Olive oil is useful for hair because it can coat and protect the more fragile strands and moisturize the scalp. Try:</dd>
-        <ul>
-            <li>Conditioning the scalp and hair ends with olive oil 10-15 minutes before a shower and then wash it away with your regular shampoo.</li>
+            <dd>Olive oil is useful for hair because it can coat and protect the more fragile strands and moisturize the scalp. Try:</dd>
+            <dd>
+                <ul>
+                    <li>Conditioning the scalp and hair ends with olive oil 10-15 minutes before a shower and then wash it away with your regular shampoo.</li>
 
-            <li>Calm fly-away hairs by patting them with a little olive oil.</li>
+                    <li>Calm fly-away hairs by patting them with a little olive oil.</li>
 
-            <li>Give your hair extra shine by rubbing olive oil in your hands and then gently running your hands through your hair. If you want to add a little scent try a few drops of tea tree, lavender, or rosemary oil.</li>
-        </ul>
-        <dt><h4>Hands & Feet</h4></dt>
+                    <li>Give your hair extra shine by rubbing olive oil in your hands and then gently running your hands through your hair. If you want to add a little scent try a few drops of tea tree, lavender, or rosemary oil.</li>
+                </ul>
+            </dd>
+            <dt><h4>Hands & Feet</h4></dt>
 
-        <dd>Olive oil can be used like lotion to cover microcracks in the skin, and the benefits don’t end there:</dd>
-        <ul>
-            <li>Heal cracked feet by washing them, applying olive oil while the feet are slightly damp, and then put on socks to hold the olive oil against the skin. For the best results do this at bedtime to allow the olive oil the most time to soften the skin.</li>
+            <dd>Olive oil can be used like lotion to cover microcracks in the skin, and the benefits don’t end there:</dd>
+            <dd>
+                <ul>
+                    <li>Heal cracked feet by washing them, applying olive oil while the feet are slightly damp, and then put on socks to hold the olive oil against the skin. For the best results do this at bedtime to allow the olive oil the most time to soften the skin.</li>
 
-            <li>Use olive oil as a cuticle cream or a hand lotion to sooth and soften the skin.</li>
+                    <li>Use olive oil as a cuticle cream or a hand lotion to sooth and soften the skin.</li>
 
-            <li>Scrub off dead skin to create shine by combining olive oil with lemon juice and sugar. Rub this into any skin that’s looking dull or flakey to get back a healthy glow.</li>
-        </ul>
-        <dt><h4>Face</h4></dt>
+                    <li>Scrub off dead skin to create shine by combining olive oil with lemon juice and sugar. Rub this into any skin that’s looking dull or flakey to get back a healthy glow.</li>
+                </ul>
+            </dd>
+            <dt><h4>Face</h4></dt>
 
-        <dd>It might seem strange to think about putting more oil on your face, but it’s actually very beneficial when not used to excess. Olive oil should be applied to a cotton ball and dabbed on the face, instead of being rubbed on with fingers, to prevent clogging pores.</dd>
-        <br>
-        <dd>Having a problem removing eye make-up? Try this:</dd> 
-        <ul>
-            <li>Apply olive oil to a cotton ball and dab it on eyes to breakdown waterproof components and pull oil-based make-up off the face.</li> 
-            <li>Follow your normal skin care routine to wash, tone, and moisturize.</li> 
-            <li>Read a suggested <a href = "https://www.shape.com/lifestyle/beauty-style/diy-olive-oil-eye-makeup-remover" target="_blank">recipe</a>.</li>
+            <dd>It might seem strange to think about putting more oil on your face, but it’s actually very beneficial when not used to excess. Olive oil should be applied to a cotton ball and dabbed on the face, instead of being rubbed on with fingers, to prevent clogging pores.</dd>
+            <br>
+            <dd>Having a problem removing eye make-up? Try this:</dd>
+            <dd>
+                <ul>
+                    <li>Apply olive oil to a cotton ball and dab it on eyes to breakdown waterproof components and pull oil-based make-up off the face.</li> 
+                    <li>Follow your normal skin care routine to wash, tone, and moisturize.</li> 
+                    <li>Read a suggested <a href = "https://www.shape.com/lifestyle/beauty-style/diy-olive-oil-eye-makeup-remover" target="_blank">recipe</a>.</li>
 
-        Create a lip scrub using olive oil and sugar. Add lemon juice or orange juice to give it extra flavor.
-        </ul>
+                Create a lip scrub using olive oil and sugar. Add lemon juice or orange juice to give it extra flavor.
+                </ul>
+            </dd>
         </dl>
     </article>
 </body>
