"Fixed list tag and removed hanging <br> in <dl> - CSS preferred"

--- a/Olive.html
+++ b/Olive.html
@@ -48,15 +48,13 @@
             <dt><h4>Face</h4></dt>
 
             <dd>It might seem strange to think about putting more oil on your face, but it’s actually very beneficial when not used to excess. Olive oil should be applied to a cotton ball and dabbed on the face, instead of being rubbed on with fingers, to prevent clogging pores.</dd>
-            <br>
             <dd>Having a problem removing eye make-up? Try this:</dd>
             <dd>
                 <ul>
                     <li>Apply olive oil to a cotton ball and dab it on eyes to breakdown waterproof components and pull oil-based make-up off the face.</li> 
                     <li>Follow your normal skin care routine to wash, tone, and moisturize.</li> 
                     <li>Read a suggested <a href = "https://www.shape.com/lifestyle/beauty-style/diy-olive-oil-eye-makeup-remover" target="_blank">recipe</a>.</li>
-
-                Create a lip scrub using olive oil and sugar. Add lemon juice or orange juice to give it extra flavor.
+                    <li>Create a lip scrub using olive oil and sugar. Add lemon juice or orange juice to give it extra flavor.</li>
                 </ul>
             </dd>
         </dl>
